# mlir-toy

./: CMakeLists.txt  README.md  compile_commands.json  example.mlir  main.cpp
.cache/clangd/index/: Toy.cpp.82DB201F6CD0FB87.idx  ToyDialect.h.B288FD4AD517BA36.idx  ToyOps.h.61FDE53EAE3F6066.idx  ToyPasses.h.8897DE8A23136AB2.idx  main.cpp.2962E910ED8A9D88.idx  toy-opt.cpp.0FB801EDD8BADCB1.idx
include/toy/: CMakeLists.txt  Toy.td  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td  ToyPasses.h  ToyPasses.td
lib/: CMakeLists.txt  Toy.cpp
lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp  ToyOptimizaiton.cpp
tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
